@@ -1,3 +1,4 @@
+Fraction Matcher: Added red as a representation color
 Fraction Matcher: Always show the "check answer" button on the left side
 Fraction Matcher: Made the big yellow equals sign have square corners instead of rounded
 Fraction Matcher: Fixed: For fractions > 1, sometimes the bar on the number line uses green instead of the representation color
